# agent_repository

./: .env.example  .firebaserc  .gitignore  BRAINSTORMS.md  CONCERNS3-claude.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  SECURITY_AUDIT.md  SETUP_NEEDED.md  SETUP_RESPONSE.md  TODO-dashboard.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  firebase.json  pyproject.toml
.firebase/: hosting.d2Vi.cache
app/: config.py  database.py  error_reporting.py  logging_config.py  main.py  metrics.py  middleware.py
audit/: phase2-fixes.md  test-integrity-report.md
demos/: Dockerfile  demo.py  demo_db.py  demo_failure.py  demo_hosting.py  demo_setup.py  demo_success.py  demo_teardown.py  demo_wallet.py  run_integration.sh  run_staging.sh  test_hosting.py
docs/: architecture.md  documentation-hosting.md  fees.md  gke-connect-gateway.md  instructions.md  wallet-integration.md  webhook-verification.md
infra/: .gitignore  README.md  STAGING_POSTMORTEM.md  imports.tf  main.tf  outputs.tf  production.tfplan  production.tfvars  staging.tfplan  staging.tfvars  variables.tf
issues/: CONCERNS.md  CONCERNS2.md  CONCERNS3.md  MIGRATION.md  README.md
kb/: README.md
load-tests/: README.md  main.js  setup.py  signer.py  test-data.json
migrations/: env.py
runbooks/: README.md  agent-management.md  database-operations.md  deployment.md  escrow-job-intervention.md  incident-response.md  monitoring-alerts.md  stuck-transactions.md
runtime/: Dockerfile  NetworkPolicy.yaml  namespace.yaml
scripts/: demo.py  demo_failure.py  demo_success.py  demo_wallet.py  serve-docs.sh
(+229 files in other folders)
