[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-registry"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.0",
    "pynacl>=1.5.0",
    "httpx>=0.26.0",
    "jsonschema>=4.21.0",
    "web3>=7.0.0",
    "eth-account>=0.13.0",
    "google-cloud-secret-manager>=2.18.0",
    "kubernetes>=29.0.0",
    "google-auth>=2.27.0",
    "google-cloud-container>=2.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:coroutine.*was never awaited:RuntimeWarning",
]

[tool.setuptools.packages.find]
include = ["app*"]
